--- a/BasicLearn/BasicLearn.Javascript.Part1/JqueryTest.htm
+++ b/BasicLearn/BasicLearn.Javascript.Part1/JqueryTest.htm
@@ -7,6 +7,8 @@
     </style>
     <script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>
     <script src="Scripts/myJquerytest.js" type="text/javascript"></script>
+    <script src="Scripts/Closure.js" type="text/javascript"></script>
+    <script src="Scripts/argsCollect.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="main">
