--- a/BasicLearn/RestfulApp.WebUI/Models/PersonManage.htm
+++ b/BasicLearn/RestfulApp.WebUI/Models/PersonManage.htm
@@ -5,7 +5,7 @@
     <script src="../Scripts/jquery-1.4.1.js" type="text/javascript"></script>
     <script src="../Scripts/jquery.tmpl.min.js" type="text/javascript"></script>
     <script src="../Scripts/knockout-1.2.1.js" type="text/javascript"></script>
-
+    <script src="KAjax.js" type="text/javascript"></script>
     <script type="text/javascript">
         var personViewModel = {
             tickets: [
@@ -20,7 +20,14 @@
         };
 
         $(document).ready(function () {
-            
+            kquery.ajax({
+                "url": "http://www.keily.com/restfulservices/person/persondetail",
+                "data":{"name":"Byron"},
+                "onSucceed": function (result) {
+                    alert(result);
+                } 
+            });
+
             $.ajax({
                 type: "GET",
                 url: "http://www.keily.com/restfulservices/person/persondetail",
@@ -29,7 +36,7 @@
                 dataType: "json",
                 success: function (obj) {
                     console.log(obj);
-                    personViewModel.personInfo(obj)                    
+                    personViewModel.personInfo(obj)
                 },
                 error: function (msg) {
                     alert(msg);
